--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <header class="header">
+    <h1>
+      <img src="./assets/phone-book.png" alt="">
+      Phonebook
+    </h1>
+  </header>
   <app-root></app-root>
 </body>
 </html>
